deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dadjokes-deployment
  namespace: sre-techtask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dadjokes
  template:
    metadata:
      labels:
        app: dadjokes
    spec:
      containers:
        - name: dadjokes-container
          image: yesinteractive/dadjokes
          ports:
            - containerPort: 8100
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 80
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 80
          #   initialDelaySeconds: 10
          #   periodSeconds: 30
